fixed many errors...