@@ -6,7 +6,6 @@ import it.polimi.States.RoomState;
 import it.polimi.States.RoomStateManager;
 import it.polimi.Storage.NodeHistoryManager;
 import it.polimi.Storage.ReplicationManager;
-import org.w3c.dom.Node;
 
 import java.io.Serializable;
 
@@ -18,22 +17,19 @@ public class GetListUserNodesMessage extends Message implements Serializable {
         this.sender = sender;
     }
 
-    public String getSender() {
-        return sender;
-    }
-
     @Override
     public void process(RoomState state) {
-        System.out.println("ok");
+        System.out.println("Received request for user nodes");
         // if I'm the leader in the other partitions I will respond unless I'm trying to solve the partition too
-        if (ReplicationManager.getInstance().getUserNodes().get(0).equals(RoomStateManager.getInstance().getIp() + ":" + RoomStateManager.getInstance().getPort())) {
-            System.out.println(NodeHistoryManager.getInstance().getSolvingPartitionUser());
+        String leader = ReplicationManager.getInstance().getUserNodes().getFirst();
+        if (leader.equals(RoomStateManager.getInstance().getMyEndpoint())) {
+            System.out.println("U Sending: " + ReplicationManager.getInstance().getUserNodes());
             if (!NodeHistoryManager.getInstance().getSolvingPartitionUser()) {
-                SendListUserNodesMessage message = new SendListUserNodesMessage(ReplicationManager.getInstance().getUserNodes());
-                message.sendMessage(new Participant(0, "-", sender));
+                new SendListUserNodesMessage(ReplicationManager.getInstance().getUserNodes())
+                        .sendMessage(new Participant(0, "-", sender));
             }
         } else {
-            String leader = ReplicationManager.getInstance().getUserNodes().get(0);
+            System.out.println("Redirecting request to leader");
             this.sendMessage(new Participant(0, "-", leader));
         }
     }
